--- a/p/build_ctf_write_up/index.html
+++ b/p/build_ctf_write_up/index.html
@@ -419,7 +419,7 @@
         
 
         <div class="article-details">
-            <h2 class="article-title">CTF_show Web 命令执行writeup P2</h2>
+            <h2 class="article-title">CTF_show Web 命令执行writeup P2 WEB41-WEB50</h2>
         </div>
     </a>
 </article>
